--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 torch>=2.1.2
 torchvision>=0.16.2
 torchaudio>=2.1.2
+timm>=1.0.16
 ultralytics>=8.3.161
 transformers>=4.53.0
 opencv-python>=4.8.1.78
